x64/Release/CudaProject.log
  Compiling CUDA source file main.cu...
  Compiling CUDA source file parameters.cu...
  
  C:\Users\meloy\source\repos\CudaProject\CudaProject>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.40.33807\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DWIN32 -DWIN64 -DNDEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o C:\Users\meloy\source\repos\CudaProject\CudaProject\x64\Release\parameters.cu.obj "C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu" 
  
  C:\Users\meloy\source\repos\CudaProject\CudaProject>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.40.33807\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DWIN32 -DWIN64 -DNDEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o C:\Users\meloy\source\repos\CudaProject\CudaProject\x64\Release\main.cu.obj "C:\Users\meloy\source\repos\CudaProject\CudaProject\main.cu" 
C:\Users\meloy\source\repos\CudaProject\CudaProject\main.cu(1): fatal error C1083: Cannot open include file: 'pybind11/pybind11.h': No such file or directory
  main.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.5.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.40.33807\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.5\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DWIN32 -DWIN64 -DNDEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o C:\Users\meloy\source\repos\CudaProject\CudaProject\x64\Release\main.cu.obj "C:\Users\meloy\source\repos\CudaProject\CudaProject\main.cu"" exited with code 2.
C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu(34): warning #177-D: variable "i" was declared but never referenced
            int i = idx / params.Ny;
                ^
  
  Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"
  
C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu(35): warning #177-D: variable "j" was declared but never referenced
            int j = idx % params.Ny;
                ^
  
C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu(50): warning #177-D: variable "i" was declared but never referenced
            int i = idx / Ny;
                ^
  
C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu(51): warning #177-D: variable "j" was declared but never referenced
            int j = idx % Ny;
                ^
  
C:\Users\meloy\source\repos\CudaProject\CudaProject\parameters.cu(212): warning #177-D: variable "numBlocksY" was declared but never referenced
        int numBlocksY = (params.Ny + blockSize - 1) / blockSize;
            ^
  
  parameters.cu
  tmpxft_000075b4_00000000-7_parameters.cudafe1.cpp
